# docs/openapi.yaml
@@ -115,6 +115,13 @@ $defs:
             minimum: 0
             maximum: 50000000
             example: 1337
+      animenewsnetwork:
+        oneOf:
+          - type: "null"
+          - type: integer
+            minimum: 0
+            maximum: 50000000
+            example: 1337
       themoviedb:
         oneOf:
           - type: "null"
@@ -122,6 +129,13 @@ $defs:
             minimum: 0
             maximum: 50000000
             example: 1337
+      themoviedb-season:
+        oneOf:
+          - type: "null"
+          - type: integer
+            minimum: 0
+            maximum: 50000000
+            example: 1
       thetvdb:
         oneOf:
           - type: "null"
@@ -129,6 +143,13 @@ $defs:
             minimum: 0
             maximum: 50000000
             example: 1337
+      thetvdb-season:
+        oneOf:
+          - type: "null"
+          - type: integer
+            minimum: 0
+            maximum: 50000000
+            example: 1
       myanimelist:
         oneOf:
           - type: "null"
@@ -136,6 +157,27 @@ $defs:
             minimum: 0
             maximum: 50000000
             example: 1337
+      simkl:
+        oneOf:
+          - type: "null"
+          - type: integer
+            minimum: 0
+            maximum: 50000000
+            example: 1337
+      animecountdown:
+        oneOf:
+          - type: "null"
+          - type: integer
+            minimum: 0
+            maximum: 50000000
+            example: 1337
+      media:
+        oneOf:
+          - type: "null"
+          - type: string
+            minLength: 0
+            maxLength: 10
+            example: TV
 
   nullable_relation:
     oneOf:
@@ -146,14 +188,19 @@ $defs:
     example:
       anidb: 1337
       anilist: 1337
-      anime-planet: spriggan
+      anime-planet: dororon-enma-kun
       anisearch: null
       imdb: tt0164917
       kitsu: null
       livechart: null
       themoviedb: null
+      themoviedb-season: 1
       thetvdb: null
+      thetvdb-season: 1
       myanimelist: null
+      animecountdown: null
+      animenewsnetwork: null
+      media: TV
     oneOf:
       - $ref: "#/$defs/nullable_relation"
       - type: array
@@ -297,6 +344,8 @@ paths:
               - anilist
               - anidb
               - anime-planet
+              - animecountdown
+              - animenewsnetwork
               - anisearch
               - kitsu
               - livechart
@@ -394,6 +443,18 @@ paths:
                         - type: integer
                           minimum: 0
                           maximum: 50000000
+                    animenewsnetwork:
+                      oneOf:
+                        - type: "null"
+                        - type: string
+                          minLength: 1
+                          maxLength: 50
+                    animecountdown:
+                      oneOf:
+                        - type: "null"
+                        - type: integer
+                          minimum: 0
+                          maximum: 50000000
                 - type: array
                   minItems: 1
                   maxItems: 100
@@ -439,6 +500,18 @@ paths:
                             minimum: 0
                             maximum: 50000000
                       myanimelist:
+                        oneOf:
+                          - type: "null"
+                          - type: integer
+                            minimum: 0
+                            maximum: 50000000
+                      animenewsnetwork:
+                        oneOf:
+                          - type: "null"
+                          - type: integer
+                            minimum: 0
+                            maximum: 50000000
+                      animecountdown:
                         oneOf:
                           - type: "null"
                           - type: integer
