# src/routes/v2/include.test-utils.ts
@@ -74,9 +74,15 @@ export const testIncludeQueryParam = (
 				imdb: null,
 				kitsu: null,
 				livechart: null,
+				animenewsnetwork: null,
 				themoviedb: null,
+				"themoviedb-season": null,
 				thetvdb: null,
+				"thetvdb-season": null,
 				myanimelist: null,
+				simkl: null,
+				animecountdown: null,
+				media: null,
 			}
 			expectedResult[source] = prefixify(source, 1337) as never
 
